fixed alignment issue

--- a/src/components/category/category.styles.scss
+++ b/src/components/category/category.styles.scss
@@ -21,7 +21,7 @@
             }
 
             @media(min-width: 2400px) {
-                top: -25rem;
+                top: -20rem;
             }
         }
 
@@ -43,7 +43,7 @@
             }
 
             @media(min-width: 2400px) {
-                top: -25rem;
+                top: -20rem;
             }
             
     
